--- a/client/app/club/club.css
+++ b/client/app/club/club.css
@@ -25,6 +25,27 @@
 }
 
 
+.settings   {
+    position: fixed;
+    top: 150px;
+    right:2%;
+    z-index: 1;
+
+}
+.settings button{
+    border-radius: 50%;
+    padding: 2px 0px;
+}
+#list_heading{
+    font-size:13px;
+    color:#337AB7;
+    border-bottom:2px solid #337AB7;
+    padding: 5px;
+    width: 100%;
+    position: relative; 
+}
+
+
 
 
 
