--- a/client/app/uploadPortal/uploadPortal.css
+++ b/client/app/uploadPortal/uploadPortal.css
@@ -209,6 +209,12 @@
 		background-color: rgba(255,255,255,0.05);	
 
 	}
+	.glassy_thick	{
+		color: rgba(255,255,255,0.7);
+		padding: 10px;
+		background-color: rgba(255,255,255,0.2);	
+
+	}
 	#img_des_com	{
 		margin: 0px 16.67%;
 	}
@@ -217,7 +223,8 @@
         
        height: 100%;
        width: auto;
-        margin:0px 15%;
+        margin:0px 25%;
+        box-shadow: 1px 1px 10px black, 1px 1px 2px grey;
         position: relative;
 	}
 	#img_viewed_info	{
