--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -8,7 +8,12 @@
             //if you hard code, then use console
             //.log to determine when you want the 
             //nav bar to stick. 
-            var height=$(window).height(); 
+            var trueHeight=$(window).outerHeight();
+                    var height;
+                    if(trueHeight>500)
+                      height=trueHeight;
+                    else 
+                      height=500; 
             console.log($(window).scrollTop())
           if ($(window).scrollTop() > (height-45)) {
             $('#top_logo').addClass('top_logo_sec');
@@ -64,7 +69,7 @@
             <a href="/profile/{{getCurrentUser()._id}}" id="_logo" ng-show="isLoggedIn()">{{getCurrentUser().name}}</a>
             <a href="/login" id="_logo" ng-hide="isLoggedIn()">Guest</a>       
             
-            <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+            <ul class="dropdown-menu box_shadow_dwn" role="menu" aria-labelledby="menu1">
                                      <div id="indiv_res" ng-show="isLoggedIn()"><a role="menuitem" tabindex="-1" href="#"  ><li role="presentation">Settings</li></a></div>
                                      <div id="indiv_res" ng-show="isLoggedIn()"><a role="menuitem" tabindex="-1" href="#" ng-click="logout()" ><li role="presentation">Sign out</li></a></div>
                                      <div id="indiv_res"  ng-hide="isLoggedIn()"><a role="menuitem" tabindex="-1" href="/login" ><li role="presentation">Login</li></a></div>
