--- a/client/app/profile/profile.css
+++ b/client/app/profile/profile.css
@@ -268,8 +268,7 @@
             .form-group input   {
                 border-color: none;
                 border-style: solid;
-                border-bottom-color: rgba(255,255,255,0.1);
-                border-bottom-width: 1px;
+                border-bottom: 1px solid #0000ff !important;
 
 
                      
