--- a/client/app/club/club.css
+++ b/client/app/club/club.css
@@ -36,13 +36,14 @@
     border-radius: 50%;
     padding: 2px 0px;
 }
-#list_heading{
+.list_heading{
     font-size:13px;
     color:#337AB7;
     border-bottom:2px solid #337AB7;
     padding: 5px;
     width: 100%;
     position: relative; 
+    font-weight: bold;
 }
 
 
