--- a/client/app/dashboard/dashboard.css
+++ b/client/app/dashboard/dashboard.css
@@ -51,7 +51,7 @@
             
             margin: 0px;
             width: 100%;
-          
+            /*background-color: white;*/
             background-image: url("http://www.siwallpaperhd.com/wp-content/uploads/2015/06/black_desktop_wallpaper_hd_1.jpg");          
            padding: 0px;
            background-repeat: repeat;   
@@ -203,21 +203,27 @@
             padding: 10px 20px;
         }
         #vedikites_title{
-            box-shadow: 1px 1px 2px grey;
-            background-color: grey;
+            
+
+            background-color: none;
             position: relative;
             float: left;
-            padding: 10px 40px 0px 130px;
+            height: 200px;
+            margin: 0px 0px 40px 0px;
+            padding: 70px 40px 0px 130px;
+            width: 100%;
         }
         #latest_tab{
-             padding: 20px 30px;   
+             padding: 70px 30px;   
              float: left;
-             height: 78px;
-             background-color: white; 
+             height: 200px;
+             font-size: 30px;
+             color: white; 
+             width: 100%;           
+             background-color: rgba(255,255,255,0.2); 
         }
         #latest_tab a{
-            font-size: 30px;
-            width: 10%;
+            
            
             
         }
