--- a/client/components/jqscripts/jqscripts.html
+++ b/client/components/jqscripts/jqscripts.html
@@ -4,11 +4,13 @@
         
             $("#gal_pic").css({"clip": 'rect(0px,'+$(window).width()+'px,'+$(window).height()+'px,0px)'});
             $("#pro_pic").css({"height": $(window).height()+'px'});
+            $("md-sidenav").css({"height": $(window).height()+'px'});
       });
     $(window).resize(function(){
         
             $("#gal_pic").css({"clip": 'rect(0px,'+$(window).width()+'px,'+$(window).height()+'px,0px)'});
             $("#pro_pic").css({"height": $(window).height()+'px'});
+            $("md-sidenav").css({"height": $(window).height()+'px'});
       });
 </script>
 
@@ -54,3 +56,30 @@
     });
   });
 </script>
+
+<!--***************nav bar********************-->
+<script type="text/javascript">
+      $(document).ready(function() {
+        
+
+        $(window).scroll(function () {
+            //if you hard code, then use console
+            //.log to determine when you want the 
+            //nav bar to stick. 
+             trueHeight=$(window).outerHeight();
+                    
+                    if(trueHeight>500)
+                      height=trueHeight;
+                    else 
+                      height=500; 
+            console.log($(window).scrollTop())
+          if ($(window).scrollTop() > (height-45)) {
+            $('#top_logo').addClass('top_logo_sec');
+          }
+          if ($(window).scrollTop() < (height-44)) {
+            $('#top_logo').removeClass('top_logo_sec');
+          }
+          
+        });
+      });
+    </script>
